# bby-ai-stock-cc

./: .gitignore  AGENTS.md  LICENSE  README.md  groups.yaml  timeline.yaml
.github/workflows/: pages.yml
.skills/add-tracker/: SKILL.md
.skills/brief/: SKILL.md
.skills/check-triggers/: SKILL.md
.skills/cluster/: SKILL.md
.skills/compare/: SKILL.md
.skills/deactivate-stock/: SKILL.md
.skills/deep-dive/: SKILL.md
.skills/earnings-scorecard/: SKILL.md
.skills/find-analysis/: SKILL.md
.skills/intraday-chart/: SKILL.md
.skills/publish/: SKILL.md
.skills/pulse/: SKILL.md
.skills/quarterly-review/: SKILL.md
attributions/: README.md  index.jsonl
dashboard/: 2026-06-18.md  2026-06-22.md  2026-06-23.md  2026-06-24-dram.md  2026-06-24.md  2026-06-25.md  2026-06-26.md  2026-06-29.md  2026-06-30.md  2026-07-01-ai-chain.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md
research/: 2026-07-01-ai-value-chain.md  2026-07-17-skhy-dram-valuation.md
scripts/: build_chart.py  build_index.py  build_intraday_chart.py  build_timeline.py  fetch.py  fetch_13f.py  fetch_insider.py  fetch_intraday.py  fetch_overview.py  find_analysis.py  find_attributions.py  manage_focus.py  publish.sh  pyproject.toml  record_attribution.py  render.py  score_predictions.py
scripts/tests/: test_fetch.py  test_fetch_13f.py  test_fetch_insider.py
site/: index.html
(+180 files in other folders)
