[project]
name = "stock-fetchers"
version = "0.1.0"
description = "Python data fetchers for the stock tracking workspace"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "feedparser>=6.0.11",
    "requests>=2.32.0",
    "pyyaml>=6.0.2",
    "markdown>=3.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pandas>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
